<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Alibi Cam</string>
    <string name="dialog_close_cancel_label">Cancel</string>
    <string name="dialog_close_neutral_label">OK</string>
    <string name="continue_label">Continue</string>
    <string name="format_kbps"><xliff:g name="value">%s</xliff:g> KB/s</string>
    <string name="form_error_type_notNumber">Please enter a valid number</string>
    <string name="form_error_value_notInRange">Please enter a number between <xliff:g name="min">%s</xliff:g> and <xliff:g name="max">%s</xliff:g></string>
    <string name="form_error_value_mustBeGreaterThan">Please enter a number greater than <xliff:g name="min">%s</xliff:g></string>
    <string name="form_value_selected">Selected: %s</string>
    <string name="a11y_selectValue">Select %s</string>
    <string name="notificationChannels_recorder_name">Recorder</string>
    <string name="notificationChannels_recorder_description">Shows the current recording status</string>
    <string name="ui_permissions_request_title">Permission denied</string>
    <string name="ui_permissions_request">Please grant the permission to continue</string>
    <string name="ui_permissions_permanentlyDenied_message">You will be redirected to the app settings to grant the permission there.</string>
    <string name="ui_audioRecorder_action_start_label">Start Audio Recording</string>
    <string name="ui_audioRecorder_state_recording_title">Recording Audio</string>
    <string name="ui_recorder_action_saveOldRecording_label">Save Recording from <xliff:g name="date">%s</xliff:g></string>
    <string name="ui_recorder_action_delete_label">Delete</string>
    <string name="ui_recorder_action_delete_confirm_title">Delete Recording?</string>
    <string name="ui_recorder_action_delete_confirm_message">Are you sure you want to delete this recording?</string>
    <string name="ui_recorder_action_pause_label">Pause</string>
    <string name="ui_recorder_action_resume_label">Resume</string>
    <string name="ui_recorder_action_save_label">Save</string>
    <string name="ui_recorder_action_stop_save">Stop &amp; Save</string>
    <string name="ui_recorder_action_save_success">Recording has been saved successfully!</string>
    <string name="ui_recorder_action_save_openFolder">Open</string>
    <string name="ui_recorder_action_start_description_1">Alibi will continue recording in the background and store the last\u0020</string>
    <string name="ui_recorder_action_start_description_2"><xliff:g name="durationInMinutes">%s</xliff:g> minutes</string>
    <string name="ui_recorder_action_start_description_3">\u0020at your request</string>
    <string name="ui_recorder_action_save_processing_dialog_title">Processing</string>
    <string name="ui_recorder_action_save_processing_dialog_description">Processing your recording, do not close Alibi! You will automatically be prompted to save the file once it\'s ready. This process may take a few minutes if your time frame is big. Once this is finished and you are asked to save the file, please do so and then wait until you see Alibi\'s main screen again.</string>
    <string name="ui_recorder_state_recording_description">Alibi keeps recording in the background</string>
    <string name="ui_recorder_state_recording_fake_weather_title">Current Weather</string>
    <string name="ui_recorder_state_recording_fake_weather_description">14° with light chance of rain</string>
    <string name="ui_recorder_state_recording_fake_player_title">Playing Audio</string>
    <string name="ui_recorder_state_recording_fake_player_description">Now playing: Despacito</string>
    <string name="ui_recorder_state_recording_fake_browser_title">Downloading attachments.zip</string>
    <string name="ui_recorder_state_recording_fake_browser_description">Downloading file...</string>
    <string name="ui_recorder_state_recording_fake_vpn_title">Connected to VPN</string>
    <string name="ui_recorder_state_recording_fake_vpn_description">Connection Secured</string>
    <string name="ui_welcome_explanation_title">Welcome to Alibi!</string>
    <string name="ui_welcome_explanation_message">Alibi is like a dashcam for your phone. It allows you to record audio and video continuously and save the last 30 minutes at your request.</string>
    <string name="ui_welcome_responsibility_title">You are solely responsible for the use of this app</string>
    <string name="ui_welcome_responsibility_message">Alibi does not take any responsibility for the use of this app. You are solely responsible. Use it at your own risk.</string>
    <string name="ui_welcome_start_label">Start Alibi</string>
    <string name="ui_settings_title">Settings</string>
    <string name="ui_settings_advancedSettings_label">Advanced Settings</string>
    <string name="ui_settings_hint_recordingActive_title">You are recording</string>
    <string name="ui_settings_hint_recordingActive_message">Your changes will be applied the next time you start recording</string>
    <string name="ui_settings_option_maxDuration_title">Max duration</string>
    <string name="ui_settings_option_maxDuration_description">Set the maximum duration of the recording</string>
    <string name="ui_settings_option_intervalDuration_title">Batch duration</string>
    <string name="ui_settings_option_intervalDuration_description">Record a single batch for this duration. Alibi records multiple batches and deletes the oldest one.</string>
    <string name="ui_settings_option_bitrate_title">Bitrate</string>
    <string name="ui_settings_option_bitrate_description">A higher bitrate means better quality but also larger file size</string>
    <string name="ui_settings_option_bitrate_explanation">Set the bitrate for the audio recording</string>
    <string name="ui_settings_option_outputFormat_title">Output Format</string>
    <string name="ui_settings_option_samplingRate_title">Sampling rate</string>
    <string name="ui_settings_option_samplingRate_description">Define how many samples per second are taken from the audio signal</string>
    <string name="ui_settings_option_samplingRate_explanation">Set the sampling rate</string>
    <string name="ui_settings_option_encoder_title">Encoder</string>
    <string name="ui_settings_option_encoder_extra_outputFormatChanged">Output Format has been changed because the current one was incompatible with this encoder</string>
    <string name="ui_settings_value_auto_label">Auto</string>
    <string name="ui_recorder_state_paused_title">Recording paused</string>
    <string name="ui_recorder_state_paused_description">Alibi is paused</string>
    <string name="ui_recorder_error_recording_title">An error occurred</string>
    <string name="ui_recorder_error_recording_description">Alibi encountered an error during recording. Try using different settings or restart the app.</string>
    <string name="ui_settings_language_title">Language</string>
    <string name="ui_settings_language_update_label">Change</string>
    <string name="ui_audioRecorder_info_microphone_deviceMicrophone">Device Microphone</string>
    <string name="ui_audioRecorder_info_microphone_changeExplanation">The selected microphone will be activated immediately</string>
    <string name="ui_audioRecorder_error_microphoneDisconnected_title">Microphone disconnected</string>
    <string name="ui_audioRecorder_error_microphoneDisconnected_message"><xliff:g name="name">%s</xliff:g> disconnected. Alibi will use the default microphone instead. We will automatically switch back to <xliff:g name="nam">%s</xliff:g> once it reconnects.</string>
    <string name="ui_audioRecorder_error_microphoneReconnected_title">Microphone reconnected</string>
    <string name="ui_audioRecorder_error_microphoneReconnected_message"><xliff:g name="name">%s</xliff:g> reconnected! Alibi automatically changed the microphone input to it.</string>
    <string name="ui_settings_option_showAllMicrophones_title">Show hidden microphones</string>
    <string name="ui_settings_option_showAllMicrophones_description">Show all microphones, including internal ones</string>
    <string name="ui_audioRecorder_info_microphone_hiddenMicrophones">Hidden Microphones</string>
    <string name="ui_settings_option_import_label">Import Settings</string>
    <string name="ui_settings_option_export_label">Export Settings</string>
    <string name="ui_settings_option_import_dialog_text">Are you sure you want to import these settings? Your current settings will be overwritten!</string>
    <string name="ui_settings_option_import_dialog_confirm">Import settings</string>
    <string name="ui_settings_option_import_success">Settings have been imported successfully!</string>
    <string name="ui_settings_option_customNotification_title">Custom Notifications</string>
    <string name="ui_settings_option_customNotification_description_setup">Setup custom recording notifications now</string>
    <string name="ui_settings_option_customNotification_description_edit">Edit recording notifications</string>
    <string name="ui_settings_customNotifications_landing_title">Don\'t expose yourself</string>
    <string name="ui_settings_customNotifications_landing_description">Due to Android\'s restrictions, Alibi has to show a notification while recording. To hide the fact that you\'re using Alibi, you can customize the notification.</string>
    <string name="ui_settings_customNotifications_landing_help_hideNotifications">Alternatively, you can also simply disable notifications</string>
    <string name="ui_settings_customNotifications_landing_getStarted">Create own notification</string>
    <string name="ui_settings_customNotifications_preset_apply_label">Apply Preset \"%s\"</string>
    <string name="ui_settings_customNotifications_showOngoing_label">Show Duration</string>
    <string name="ui_settings_customNotifications_save_label">Update notification</string>
    <string name="ui_settings_customNotifications_edit_help">This is a preview for your notification. You can edit the title and the message. At the bottom you can find some presets.</string>
    <string name="ui_about_title">About Alibi</string>
    <string name="ui_about_contribute_title">Support Alibi</string>
    <string name="ui_about_contribute_message">In my free time I develop Alibi and other free open source software. It would mean the world to me if you could help me in any way :)</string>
    <string name="ui_about_contribute_development">Develop new features or fix bugs</string>
    <string name="accessibility_open_in_browser">Open link in browser: %s</string>
    <string name="ui_about_contribute_translation">Translate Alibi into your language</string>
    <string name="ui_about_contribute_donatation">Make a donation</string>
    <string name="ui_about_gpg_key_hint">You can copy my GPG key here. This key only exists once and I can use it to prove to you that I\'m really who I am. Please save it now so that you can verify my signature later.</string>
    <string name="ui_about_gpg_key_copy">Copy GPG Key</string>
    <string name="ui_about_contribute_donation_githubSponsors">Become a GitHub Sponsor</string>
    <string name="ui_settings_option_deleteRecordingsImmediately_title">Delete Recordings Immediately</string>
    <string name="ui_settings_option_deleteRecordingsImmediately_description">If enabled, Alibi will immediately delete recordings after you have saved the file. This only applies when using Encrypted Internal Storage.</string>
    <string name="quick_recording_audio_short_label">Record audio</string>
    <string name="quick_recording_audio_long_label">Start audio recording</string>
    <string name="quick_recording_audio_disabled">Audio recording unavailable</string>
    <string name="quick_recording_video_short_label">Record video</string>
    <string name="quick_recording_video_long_label">Start video recording</string>
    <string name="quick_recording_video_disabled">Video recording unavailable</string>
</resources>